<!--

    Copyright 2019 Adobe. All rights reserved.
    This file is licensed to you under the Apache License, Version 2.0 (the "License");
    you may not use this file except in compliance with the License. You may obtain a copy
    of the License at http://www.apache.org/licenses/LICENSE-2.0

    Unless required by applicable law or agreed to in writing, software distributed under
    the License is distributed on an "AS IS" BASIS, WITHOUT WARRANTIES OR REPRESENTATIONS
    OF ANY KIND, either express or implied. See the License for the specific language
    governing permissions and limitations under the License.

-->
<resources>
    <string name="app_name">Edge Test App</string>
    <string name="no_data">No data available</string>
    <string name="assurance_btnConnectToAssuranceSession">Connect</string>
    <string name="assurance_titleEnterSessionURL">Enter the Assurance Session URL:</string>
    <string name="label_request_environment">Request Environment</string>
    <string name="btn_request_env_prod">Prod</string>
    <string name="btn_request_env_pre_prod">Pre Prod</string>
    <string name="btn_request_env_int">INT</string>
    <string name="btn_get_hint">Get Location Hint</string>
    <string name="btn_send_event">Send Event</string>
    <string name="btn_reset_ids">Reset IDs</string>
    <string name="btn_remove_identity">Remove</string>
    <string name="btn_get_identity">Get Identity</string>
    <string name="btn_get_consent">Get Consent</string>
    <string name="set_location_hint_label">SET LOCATION HINT:</string>
    <string name="tv_collect_consent">Collect Consent</string>
    <string name="tv_edge_identity">Edge Identity</string>
    <string name="tv_mobile_core">Mobile Core</string>
    <string name="et_hint_assurance_id">Paste your Assurance session ID here</string>
    <string name="btn_connect_to_assurance">Connect to Assurance</string>
    <string name="btn_dispatch_event"><![CDATA[Dispatch Event & Send Complete]]></string>
</resources>
