<?xml version="1.0" encoding="utf-8"?>
<!--

    Copyright 2019 Adobe. All rights reserved.
    This file is licensed to you under the Apache License, Version 2.0 (the "License");
    you may not use this file except in compliance with the License. You may obtain a copy
    of the License at http://www.apache.org/licenses/LICENSE-2.0

    Unless required by applicable law or agreed to in writing, software distributed under
    the License is distributed on an "AS IS" BASIS, WITHOUT WARRANTIES OR REPRESENTATIONS
    OF ANY KIND, either express or implied. See the License for the specific language
    governing permissions and limitations under the License.

-->
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    tools:ignore="UsingOnClickInXml" >

    <TextView
        android:id="@+id/tvEnv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="10dp"
        android:paddingHorizontal="10dp"
        android:text="@string/label_request_environment"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/layout_request_environment" />

    <LinearLayout
        android:id="@+id/layout_request_environment"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginHorizontal="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvEnv"
        >

        <Button
            android:id="@+id/btn_env_prod"
            android:onClick="onUpdateEnvironmentProd"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:text="@string/btn_request_env_prod"
            android:background="@color/colorPrimary"
            android:textColor="@android:color/background_light"
            />
        <Button
            android:id="@+id/btn_env_pre_prod"
            android:onClick="onUpdateEnvironmentPreProd"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:layout_marginHorizontal="10dp"
            android:text="@string/btn_request_env_pre_prod"
            android:background="@color/colorPrimary"
            android:textColor="@android:color/background_light"
            />
        <Button
            android:id="@+id/btn_env_int"
            android:onClick="onUpdateEnvironmentInt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:text="@string/btn_request_env_int"
            android:background="@color/colorPrimary"
            android:textColor="@android:color/background_light"
            />

    </LinearLayout>

    <Button
        android:id="@+id/btnSubmitSingleEvent"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_marginTop="16dp"
        android:layout_marginHorizontal="10dp"
        android:background="@color/colorPrimary"
        android:onClick="onSubmitSingleEvent"
        android:text="@string/btn_send_event"
        android:textColor="@android:color/background_light"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/layout_request_environment" />

    <LinearLayout
        android:id="@+id/layout_location_hint"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:orientation="horizontal"
        android:layout_marginHorizontal="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnSubmitSingleEvent"
        >

        <Button
            android:id="@+id/btn_get_hint"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginEnd="5dp"
            android:layout_weight="0.5"
            android:background="@color/colorPrimary"
            android:onClick="onGetLocationHint"
            android:text="@string/btn_get_hint"
            android:textColor="@android:color/background_light" />

        <LinearLayout
        android:id="@+id/layout_spinner"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        android:layout_gravity="center"
        android:layout_weight="0.5"
        android:layout_marginStart="5dp"
        >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center"
            android:background="@color/colorPrimary"
            android:textAlignment="center"
            android:layout_gravity="center_vertical"
            android:textColor="@android:color/background_light"
            android:text="@string/set_location_hint_label"/>
        <Spinner
            android:id="@+id/set_hint_spinner"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:spinnerMode="dropdown"
            android:background="@color/colorPrimary"
            android:textColor="@android:color/background_light"
            />
    </LinearLayout>
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/colorPrimary"
        android:layout_marginHorizontal="10dp"
        android:layout_marginVertical="5dp"
        app:layout_constraintTop_toBottomOf="@+id/layout_location_hint" />

    <TextView
        android:id="@+id/tvConsent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:paddingHorizontal="10dp"
        android:text="@string/tv_collect_consent"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/layout_location_hint" />

    <LinearLayout
        android:id="@+id/layout_consent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginHorizontal="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvConsent"
        >
    <Button
        android:id="@+id/btnCollectYes"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_weight="1"
        android:background="@color/colorPrimary"
        android:onClick="onSubmitCollectYes"
        android:text="YES"
        android:textColor="@android:color/background_light"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvConsent" />

    <Button
        android:id="@+id/btnCollectNo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_weight="1"
        android:layout_marginHorizontal="10dp"
        android:background="@color/colorPrimary"
        android:onClick="onSubmitCollectNo"
        android:text="NO"
        android:textColor="@android:color/background_light"
        app:layout_constraintStart_toEndOf="@+id/btnCollectYes"
        app:layout_constraintTop_toBottomOf="@+id/tvConsent" />

    <Button
        android:id="@+id/btnCollectPending"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_weight="1"
        android:layout_marginEnd="10dp"
        android:background="@color/colorPrimary"
        android:onClick="onSubmitCollectPending"
        android:text="PENDING"
        android:textColor="@android:color/background_light"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.09"
        app:layout_constraintStart_toEndOf="@+id/btnCollectNo"
        app:layout_constraintTop_toBottomOf="@+id/tvConsent" />

    <Button
        android:id="@+id/btnGetConsent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_weight="1"
        android:background="@color/colorPrimary"
        android:onClick="getConsentAPIClicked"
        android:text="@string/btn_get_consent"
        android:textColor="@android:color/background_light"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.774"
        app:layout_constraintStart_toEndOf="@+id/btnCollectNo"
        app:layout_constraintTop_toBottomOf="@+id/tvConsent" />

    </LinearLayout>

    <View
        android:id="@+id/breakLineEdgeIdentity"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/colorPrimary"
        android:layout_marginHorizontal="10dp"
        android:layout_marginVertical="5dp"
        app:layout_constraintTop_toBottomOf="@+id/layout_consent" />

    <TextView
        android:id="@+id/tvEdgeIdentity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:paddingHorizontal="10dp"
        android:text="@string/tv_edge_identity"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/layout_consent" />

    <LinearLayout
        android:id="@+id/layout_identity"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginHorizontal="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvEdgeIdentity"
        >

    <Button
        android:id="@+id/btnIdentityUpdate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_weight="1"
        android:background="@color/colorPrimary"
        android:onClick="updateIdentitiesClicked"
        android:text="Update"
        android:textColor="@android:color/background_light"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvEdgeIdentity" />

    <Button
        android:id="@+id/btnIdentityRemove"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_weight="1"
        android:layout_marginHorizontal="10dp"
        android:background="@color/colorPrimary"
        android:onClick="removeIdentityClicked"
        android:text="@string/btn_remove_identity"
        android:textColor="@android:color/background_light"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/btnIdentityUpdate" />

    <Button
        android:id="@+id/btnGetIdentity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_weight="1"
        android:background="@color/colorPrimary"
        android:onClick="getIdentitiesClicked"
        android:text="@string/btn_get_identity"
        android:textColor="@android:color/background_light"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvEdgeIdentity" />

    </LinearLayout>

    <View
        android:id="@+id/breakLineMobileCore"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/colorPrimary"
        android:layout_marginHorizontal="10dp"
        android:layout_marginVertical="5dp"
        app:layout_constraintTop_toBottomOf="@+id/layout_identity" />

    <TextView
        android:id="@+id/tvMobileCore"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:paddingHorizontal="10dp"
        android:text="@string/tv_mobile_core"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/layout_identity" />

    <Button
        android:id="@+id/btnResetIdentities"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:background="@color/colorPrimary"
        android:onClick="resetIdentitiesClicked"
        android:text="@string/btn_reset_ids"
        android:textColor="@android:color/background_light"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvMobileCore" />

    <View
        android:id="@+id/breakLineScrollView"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/colorPrimary"
        android:layout_marginHorizontal="10dp"
        android:layout_marginVertical="5dp"
        app:layout_constraintTop_toBottomOf="@+id/btnResetIdentities" />

    <ScrollView
        android:id="@+id/scrollerId1"
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="4dp"
        android:layout_marginHorizontal="10dp"
        android:fillViewport="true"
        android:scrollbars="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnResetIdentities">

        <TextView
            android:id="@+id/tvGetData"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/no_data"
            android:textAlignment="viewStart"
            android:textAllCaps="false"
            android:textColor="@color/colorPrimary"
            android:textSize="14sp" />
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>